--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
   "devDependencies": {
     "nodemon": "^2.0.15",
     "tsconfig.json": "^1.0.10"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "express": "^4.17.2",
+    "pg": "^8.7.1",
+    "ts-node": "^10.4.0",
+    "typeorm": "^0.2.41"
   }
 }
